Fix link symbol alignment in Firefox

--- a/app/assets/stylesheets/modules/action-buttons.css.scss
+++ b/app/assets/stylesheets/modules/action-buttons.css.scss
@@ -19,10 +19,10 @@
 }
 
 .action-button--copy-link {
-  margin-top: 3px;
   width: 33px;
 
   img {
-    vertical-align: middle;
+    margin-left: 1px;
+    vertical-align: bottom;
   }
 }
